syntax = "proto3";

import "google/protobuf/timestamp.proto";

package pb.v1;

message Blank {}

message Category {
	string id = 1;
	string name = 2;
	string description = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateCategoryRequest {
	string name = 1;
	string description = 2;
}

message CreateCategoryResponse {
	Category category = 1;
}

message CategoryList {
	repeated Category categories = 1;
}

service CategoryService {
	rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse) {}
	rpc ListCategories(Blank) returns (CategoryList) {}
}
